<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greenhouse_nav</name>
  <version>0.1.0</version>
  <description>
    Vision-based indoor navigation for agricultural drones.
    Supports VIO-SLAM localization, occupancy grid obstacle avoidance,
    and DWA local planning for open-space and aisle environments.
    Hardware: Holybro X500 V2, RealSense D455, Pixhawk 6X, Jetson Orin NX.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>px4_msgs</depend>
  <depend>realsense2_camera</depend>

  <!-- Python scientific stack — must be present on Jetson (aarch64) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
